test/errors/error17.vult

fun foo() {
   val x = Error17_b.foo();
}
